# stochan

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiments/: spiral_dynamics.py
src/configs/: spiral_dynamics.yaml
src/dynamics/: spiral.py
src/models/: spiral_ode.py
src/models/neural_ode/: __init__.py  adjoint.py  neural_ode.py  ode_func.py
src/utils/: __init__.py  ode_solvers.py  plots.py
